updating travis-ci configuration

--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "postversion": "git push origin master && git push origin --tags && npm run clean",
     "prepublish": "git fetch --tags && git checkout $(git describe --tags `git rev-list --tags --max-count=1`)",
     "postpublish": "git checkout master",
-    "build": "npm run build:babel && npm run build:coffee && npm run build:test",
+
     "build:babel": "babel --ignore node_modules -x .es -d . .",
     "build:coffee": "coffee --no-header --compile --bare --output . .",
+
+    "build": "npm run build:babel && npm run build:coffee",
     "build:test": "mocha --require opt/mocha/helpers --bail --colors --check-leaks $(find src/test -name \"*.js\" -not -path \"./node_modules/*\")",
+
     "test": "mocha --recursive src/test --compilers coffee:coffee-script/register,es:babel/register --require opt/mocha/helpers --colors --check-leaks",
     "test:watch": "npm run test -- -w"
   },
