--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 language: node_js
 env:
+  - NODE_ENV:ci
   - MOCHA_OPTS_FILE=opt/mocha/production.opts
 cache:
   directories:
@@ -9,6 +10,7 @@ install:
   - npm prune # we cache modules right? lets cleanup things
 script:
   - npm test
+  - npm version patch
 deploy:
   provider: npm
   email: ivo.putzer@gmail.com
