--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ install:
   - npm install
   - npm prune
 script:
-  - npm test
+  - npm run test:all
 deploy:
   provider: npm
   email: ivo.putzer@gmail.com
