--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
   ],
   "scripts": {
     "bin": "bin/node-module",
-    "test": "mocha --full-trace --check-leaks",
-    "test:major": "git reset head~2 -- test; npm test -- $(find test/module -type f -name \\*.js)",
-    "test:minor": "git reset head~2 -- test; npm test -- $(find test -type f -name \\*.js -not -path test/module/\\*)",
-    "version:auto": "bin/version/auto"
+    "test": "mocha --recursive --full-trace --check-leaks",
+    "version:auto": "bin/version/auto",
+    "verify:major": "git reset head~2 -- test; npm test -- $(find test/module -type f -name \\*.js)",
+    "verify:minor": "git reset head~2 -- test; npm test -- $(find test -type f -name \\*.js -not -path test/module/\\*)"
   },
   "bin": {
     "node-module" : "bin/node-module"
