updates various package configurations

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   ],
   "scripts": {
     "bin": "bin/node-module",
+    "postinstall": "npm prune",
     "test": "mocha --recursive --full-trace --check-leaks",
     "version:auto": "bin/version/auto",
     "verify:major": "git reset head~2 -- test; npm test -- $(find test/module -type f -name \\*.js)",
@@ -36,7 +37,7 @@
     "npm": "^3.0.0"
   },
   "config": {
-    "analyze": false
+    "analytics": false
   },
   "dependencies": {},
   "devDependencies": {
