--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,6 @@ deploy:
   provider: npm
   email: ivo.putzer@gmail.com
   # skip_cleanup: true
-  api_key: echo $NPM_API_KEY
+  api_key: NPM_API_KEY
 # before_deploy: bin/travis/before_deploy
 # after_deploy: bin/travis/after_deploy
