updates package visibility in order for travis to push towards npm

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "node-module",
   "version": "2.0.0",
-  "private": true,
+  "private": false,
   "author": "Ivo von Putzer Reibegg <ivo.putzer@gmail.com> (https://github.com/ivoputzer)",
   "description": "node-module is a boilerplate application for easier nodejs-module setup and maintenance",
   "homepage": "https://github.com/ivoputzer/node-module",
