--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
   "scripts": {
     "bin": "bin/node-module",
     "test": "mocha --recursive --full-trace --check-leaks",
-    "version:auto": "bin/version/auto",
     "verify:major": "git reset head~2 -- test; npm test -- $(find test/module -type f -name \\*.js)",
-    "verify:minor": "git reset head~2 -- test; npm test -- $(find test -type f -name \\*.js -not -path test/module/\\*)"
+    "verify:minor": "git reset head~2 -- test; npm test -- $(find test -type f -name \\*.js -not -path test/module/\\*)",
+    "preversion": "bin/version/pre",
+    "postversion": "bin/version/post",
+    "version:auto": "bin/version/auto"
   },
   "bin": {
     "node-module" : "bin/node-module"
