--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,8 @@ install:
 after_success:
   - eval "$(ssh-agent -s)"
   - git remote -v
+  - git remote set-url origin git@github.com:ivoputzer/node-module.git
+  - git remote -v
 deploy:
   provider: npm
   email: ivo.putzer@gmail.com
