--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   ],
   "scripts": {
     "bin": "bin/node-module",
+    "preversion": "bin/npm/version/pre",
     "version:bump": "bin/npm/version/bump",
     "verify:major": "git reset head~2 -- test; npm test -- $(find test/module -type f -name \\*.js)",
     "verify:minor": "git reset head~2 -- test; npm test -- $(find test -type f -name \\*.js -not -path test/module/\\*)",
