updates travis github authentication

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,9 +13,7 @@ branches:
   only: master
 git:
   depth: 2
-before_script:
+before_deploy:
+- openssl aes-256-cbc -K $encrypted_4ad9e6c1e3a9_key -iv $encrypted_4ad9e6c1e3a9_iv
+  -in travis_rsa.enc -out travis_rsa -d
 - bin/travis/github_auth
-install:
-- npm install
-after_success:
-- eval "$(ssh-agent -s)"
