--- a/package.json
+++ b/package.json
@@ -1,47 +1,23 @@
 {
   "name": "node-module",
-  "version": "0.0.0",
   "private": false,
-  "author": "Ivo von Putzer Reibegg <ivo.putzer@gmail.com> (https://github.com/ivoputzer)",
-  "description": "node-module is a boilerplate application for easier nodejs-module setup and maintenance",
-  "homepage": "https://github.com/ivoputzer/node-module",
-  "keywords": [
-    "node",
-    "module",
-    "boilerplate",
-    "maintenance",
-    "config",
-    "setup",
-    "travis",
-    "github"
-  ],
-  "contributors": [
-    "Ivo von Putzer Reibegg <ivo.putzer@gmail.com> (https://github.com/ivoputzer)"
-  ],
-  "scripts": {
-    "node": "node",
-    "keygen": "bin/keygen",
-    "bin": "bin/node-module",
-    "preversion": "bin/npm/version/pre",
-    "version:bump": "bin/npm/version/bump",
-    "verify:major": "git reset head~2 -- test; npm test -- $(find test/module -type f -name \\*.js)",
-    "verify:minor": "git reset head~2 -- test; npm test -- $(find test -type f -name \\*.js -not -path test/module/\\*)",
-    "test": "mocha --recursive --full-trace --check-leaks"
-  },
-  "bin": {
-    "node-module": "bin/node-module"
-  },
+  "version": "3.0.0",
+  "bin": "bin/node-module",
   "main": "index.js",
+  "config": {
+  },
+  "scripts": {
+    "test": "mocha --recursive",
+    "node": "node"
+  },
   "engineStrict": true,
   "engines": {
     "node": "^6.0.0",
     "iojs": "^3.0.0",
     "npm": "^3.0.0"
   },
-  "config": {
-    "analytics": false
+  "dependencies": {
   },
-  "dependencies": {},
   "devDependencies": {
     "mocha": "^2.5.3"
   },
@@ -52,5 +28,16 @@
   "bugs": {
     "url": "https://github.com/ivoputzer/node-module/issues"
   },
-  "license": "license.md"
+  "homepage": "https://github.com/ivoputzer/node-module",
+  "description": "node-module is a boilerplate application for easier nodejs-module setup and maintenance",
+  "author": "Ivo von Putzer Reibegg <ivo.putzer@gmail.com> (https://github.com/ivoputzer)",
+  "contributors": [
+    "Ivo von Putzer Reibegg <ivo.putzer@gmail.com> (https://github.com/ivoputzer)"
+  ],
+  "keywords": [
+    "node",
+    "module",
+    "boilerplate"
+  ],
+  "license": "MIT"
 }
